Cleaned up development draft - renamed load_chas to get_chas, exported function - changed DESCRIPTION & README to fill in skeleton - added tibble to tidychas-package and NAMESPACE - added globalVariables to tidychas-package - removed un-used chas_fips_states from zzz

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: tidychas
-Title: What the Package Does (One Line, Title Case)
+Title: Access Full HUD CHAS Data with R
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Sarah", "Johnson", , "sarahviamemphis@gmail.com", role = c("aut", "cre"))
+Description: tidychas is an R package for accessing and tidying HUD's CHAS data.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
